<resources>
    <string name="blank"> </string>
    <string name="app_name">FV-100 CHECKER</string>
    <string name="app_name2">BLEControl</string>
    <string name="nav_header_title">FV-100 CHECKER</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_group_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="desc_wifi">WiFi</string>

    <string name="action_exit">Exit</string>
    <string name="action_fv100_connect">Connect</string>
    <string name="label_device">DEVICE</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>

    <string name="menu_home">Home</string>
    <string name="menu_fv100">FV-100</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tool_settings">Tools</string>
    <string name="menu_settings_bluetooth">Bluetooth Settings</string>
    <string name="menu_eeg">Brainwave Mobile</string>

    <string name="dialog_positive_execute">Execute</string>
    <string name="dialog_negative_cancel">Cancel</string>

    <string name="pref_ble_settings">Bluetooth LE Settings</string>
    <string name="pref_summary_ble_settings">Entry your camera name and passcode.</string>

    <string name="ble_scan_start">Scanning </string>
    <string name="ble_wake_start">Start </string>
    <string name="ble_scan_done"> Done.</string>
    <string name="ble_control_is_limited_version">Bluetooth control is available from Android 5.0 (Lollipop) onwards.</string>
    <string name="ble_adapter_is_nothing">The Bluetooth scanner not available.</string>

    <string name="launch_fail_via_ble">  Launch fail. via BLE : </string>
    <string name="ble_setting_is_off">Bluetooth is currently off.</string>
    <string name="saved_my_camera">Registerd : </string>

    <string name="save_props">Save</string>
    <string name="hint_save_bt_name">Name</string>
    <string name="hint_save_bt_passcode">Passcode</string>

    <string name="pref_bluetooth_power_on">Bt Power On</string>
    <string name="pref_summary_bluetooth_power_on">Camera Power on via Bluetooth Smart</string>

    <string name="query_device">Connect</string>
    <string name="start_query">Connect to </string>

    <string name="not_support_android_version">Android version is too old, please use another device.</string>
    <string name="not_support_ble">This device does not support BLE feature, so please use another one.</string>
    <string name="ble_scan_start_failure">BLE scan start failure.</string>
    <string name="scan_fail_via_ble">BLE scan failure.</string>
    <string name="ble_scan_finished">SCAN FINISHED.</string>
    <string name="turn_on_wifi_is_failed">Turn on WIFI was failed.</string>
    <string name="connect_wifi_failure">Connect Failure : </string>
    <string name="try_to_connect_wifi">Try to connect : </string>
    <string name="ble_not_connected">BLE is not connected.</string>
    <string name="now_ble_communicating">Now communicating, please wait a while.</string>

    <string name="select_image_size">Image Size</string>
    <string name="select_video_resolution">Video Resolution</string>

    <string name="btn_ok">Set</string>
    <string name="btn_cancel">Cancel</string>

    <string name="connect_device">Connect</string>
    <string name="sensor_not_contacted">Sensor lead is not contacted.</string>

    <string name="value_title_delta">Delta(0.5&#8211;2.75Hz): </string>
    <string name="value_title_theta">Theta(3.5&#8211;6.75Hz): </string>
    <string name="value_title_lowAlpha">low Alpha(7.5&#8211;9.25Hz): </string>
    <string name="value_title_highAlpha">high Alpha(10&#8211;11.75Hz): </string>
    <string name="value_title_lowBeta">low Beta(13&#8211;16.75Hz): </string>
    <string name="value_title_highBeta">high Beta(18&#8211;29.75Hz): </string>
    <string name="value_title_lowGamma">low Gamma(31&#8211;39.75Hz): </string>
    <string name="value_title_midGamma">mid Gamma(41&#8211;49.75Hz): </string>
    <string name="value_title_attention">Attention: </string>
    <string name="value_title_mediation">Mediation: </string>
    <string name="label_logging"> Logging</string>
</resources>
