<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_fv100">

    <fragment
        android:id="@+id/nav_fv100"
        android:name="net.osdn.gokigen.blecontrol.lib.ui.fv100.FV100Fragment"
        android:label="@string/menu_fv100"
        tools:layout="@layout/fragment_fv100" />

    <fragment
        android:id="@+id/nav_home"
        android:name="net.osdn.gokigen.blecontrol.lib.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_brainwave"
        android:name="net.osdn.gokigen.blecontrol.lib.ui.brainwave.BrainwaveMobileFragment"
        android:label="@string/menu_eeg"
        tools:layout="@layout/fragment_brainwave" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="net.osdn.gokigen.blecontrol.lib.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="net.osdn.gokigen.blecontrol.lib.ui.settings.tool.ToolSettingsFragment"
        android:label="@string/menu_tool_settings"
        tools:layout="@layout/fragment_setting_tools" />

    <fragment
        android:id="@+id/nav_settings_bluetooth"
        android:name="net.osdn.gokigen.blecontrol.lib.ui.settings.bluetooth.SettingsBluetoothFragment"
        android:label="@string/menu_settings_bluetooth"
        tools:layout="@layout/fragment_settings_bluetooth" />

</navigation>