<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/label_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:text="@string/label_device"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinner_selection_device"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textSize="8pt"
            android:visibility="visible" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="6dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="button"
                android:id="@+id/query_to_device"
                android:text="@string/query_device"
                android:layout_gravity="center"
                android:textSize="8pt" />

            <ImageButton
                android:id="@+id/reload_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/blank"
                app:srcCompat="@drawable/ic_replay_black_24dp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/dummy_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/blank"
                app:srcCompat="@drawable/ic_texture_black_24dp"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/wifi_connect_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/blank"
                app:srcCompat="@drawable/ic_signal_wifi_4_bar_black_24dp"
            android:visibility="visible" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="6dp" />

        <TextView
            android:id="@+id/text_device_fv100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start"
            android:textAlignment="textStart"
            android:textIsSelectable="true"
            android:scrollbars="vertical"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
